@@ -1,27 +1,54 @@
 package com.hotel.management;
 
+import com.hotel.management.auth.JwtFilter;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
+
+    @Autowired
+    private JwtFilter jwtFilter;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/users/**").permitAll() 
-                .anyRequest().authenticated()
-            )
-            .csrf(csrf -> csrf.disable())   
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())); 
+                // ✅ CRITICAL: Disable HTTP Basic Authentication
+                .httpBasic(httpBasic -> httpBasic.disable())
+
+                // ✅ CRITICAL: Disable Form Login
+                .formLogin(formLogin -> formLogin.disable())
+
+                // ✅ Disable CSRF (not needed for REST API)
+                .csrf(csrf -> csrf.disable())
+
+                // ✅ Enable CORS
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // ✅ CRITICAL: Stateless Session Management
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+
+                // ✅ Authorization rules (ALL PUBLIC for now - JWT filter handles auth)
+                .authorizeHttpRequests(auth -> auth
+                        .anyRequest().permitAll()  // Let JwtFilter handle authentication
+                )
+
+                // ✅ CRITICAL: Add JWT Filter BEFORE Spring Security's default filter
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -29,10 +56,31 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000")); // React dev server
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")); // add OPTIONS
-        config.setAllowedHeaders(List.of("*"));
+
+        // Allow both CRA (3000) and Vite (5173) ports
+        config.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://localhost:5173"
+        ));
+
+        // Allow all HTTP methods
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+
+        // Allow all headers
+        config.setAllowedHeaders(Arrays.asList("*"));
+
+        // Allow credentials
         config.setAllowCredentials(true);
+
+        // Cache preflight requests
+        config.setMaxAge(3600L);
+
+        // Expose headers
+        config.setExposedHeaders(Arrays.asList(
+                "Authorization", "Content-Type", "X-Total-Count"
+        ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
